2005-01-09 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* geyes.c: Fix bugs #143479 and #130676

2004-09-27  Mark McLoughlin  <mark@skynet.ie>

	* gnome-eyes.png: new icon from Jakub Steiner.

2004-09-12  Shaun McCance  <shaunm@gnome.org>

	* docs/C/geyes-C.omf:
	* docs/C/geyes.xml:
	* docs/C/figures/geyes_applet.png:
	- Updated for 2.8

2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Remove references to screen-exec.
	* geyes.c: (help_cb): Use gnome_help_*
	* themes.c: (phelp_cb): Use gnome_help_*

2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* geyes.h: ANSI this.
	* themes.c: (theme_dirs_create): ANSI that. Also
	static something == FALSE is bad. Add gboolean to that.

2004-06-09  Dennis Smit  <ds@nerds-incorporated.org>

	* themes.c (properties_cb): Put the treeview
	in a scrolled window and make the dialog a tad
	bigger so everything fits better in it.

2004-03-17  Glynn Foster  <glynn.foster@sun.com>

	* docs/ja/*: Put back ja docs since the original
	author never got back to me.

2004-03-16  Glynn Foster  <glynn.foster@sun.com>

	* docs/Makefile.am: Add l10n'd docs to the build.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* docs/*.sgml: Remove the old sgml stuff, we don't
	need it anymore.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* docs/*: Localized online documentation from the 
	Sun translation team for de, es, fr, it, ko, sv
	zh_CN, zh_HK and zh_TW.

2004-02-29  Dennis Smit  <ds@nerds-incorporated.org>

	* geyes.c (applet_back_change):
	Removed bogus return.

2004-02-26  Dennis Smit  <ds@nerds-incorporated.org>

	* geyes.h: Bumping up MAX_EYES hard limit
	to 1000. 100 eyes seem to fit with a high
	resolution.

2004-02-26  Dennis Smit  <ds@nerds-incorporated.org>

	* geyes.c (applet_back_change):
	Cleaned up and fixed transparency for color
	background panels.

	(applet_set_back_pixmap):
	Cleaned up, trying to get panel pixmap
	backgrounds working. Still crashes tho.
