@@ -1,3 +1,7 @@
+2005-01-17  Davyd Madeley  <davyd@madeley.id.au>
+
+	* geyes.c: Fix transparency.
+
 2005-01-09 Nickolay V. Shmyrev <nshmyrev@yandex.ru>
 
 	* geyes.c: Fix bugs #143479 and #130676
